<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".OtpValidationActivity">

    <TextView
        android:id="@+id/otp_validation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/otp_validation"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/otp_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp_validation_title"
        android:layout_marginTop="16dp"
        android:text="@string/enter_the_otp_sent_to_your_phone_number"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/otp_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp_instruction"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/otp"
        android:inputType="number"
        android:padding="12dp"
        android:background="@android:drawable/edit_text"
        android:drawablePadding="10dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/validate_otp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp_input"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button"
        android:padding="12dp"
        android:text="@string/validate_otp"
        android:textColor="#0D47A1"
        tools:ignore="VisualLintButtonSize" />

</RelativeLayout>
