<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/women_safety_application"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="@android:drawable/edit_text"
        android:drawableStart="@android:drawable/ic_menu_call"
        android:drawablePadding="10dp"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        android:padding="12dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@android:drawable/edit_text"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:padding="12dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:padding="12dp"
        tools:ignore="VisualLintButtonSize" />

</RelativeLayout>
